--- a/catpag.css
+++ b/catpag.css
@@ -27,7 +27,7 @@ body{
 header{
     background-color: var(--cor01);
     max-width: 1100px;
-    min-height: 605px;
+    min-height: 600px;
     max-height: 700px;  
     margin: auto;
     margin-top: 10px;
@@ -54,13 +54,13 @@ nav > a{
 
     font-size: 3em;
     
-    border-radius: 0px 0px 0px 0px;
-    padding: 5px 5px;
+    border-radius: 30px;
+    padding: 5px 5px 0px 5px;
 
     min-height: 50px;
-    min-width: 1100px;
-    max-width: 500px;
-    max-width: 500px;
+    min-width: 1090px;
+    max-width: 1100px;
+    max-height: 500px;
 
 }
 
