--- a/estilospag.css
+++ b/estilospag.css
@@ -27,7 +27,7 @@ body{
 header{
     background-color: var(--cor01);
     max-width: 1100px;
-    min-height: 740px;
+    min-height: 581px;
     max-height: 1000px;  
     margin: auto;
     margin-top: 10px;
@@ -66,8 +66,8 @@ nav > a{
     
 }
 
-main{
-
+.disponivel:hover{
+    background-color: rgb(1, 58, 1);
 }
 
 
@@ -89,4 +89,29 @@ img{
 .indisponivel{
 
     background-color: red;
+}
+
+
+footer{
+    background-color: var(--cor05);
+    margin: auto;
+    color: white;
+    text-align: center;
+    padding: 2.3px;
+}
+
+
+footer a{
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
+
+footer a::after{
+    content: '\1F517';
+}
+
+footer a:hover{
+    text-decoration: underline;
+    color: gray;
 }
